--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>Pokédex</h1>
   <input type="text" id="search" placeholder="Buscar Pokémon..." />
   <div id="pokemon-list"></div>
+  <div id="detalle"></div>
   <script src="script.js"></script>
 </body>
 </html>
