--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <input type="text" id="search" placeholder="Buscar Pokémon..." />
   <div id="pokemon-list"></div>
   <div id="detalle"></div>
+  <div id="modal" class="modal">
+  <div class="modal-contenido">
+    <span id="cerrar" class="cerrar">&times;</span>
+    <div id="detalle"></div>
+  </div>
+</div>
+<script src="script.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
